[metadata]
name = glip
version = 0.1.0a1
url = https://github.com/anibali/glip
author = Aiden Nibali
author_email = dismaldenizen@gmail.com
license = Apache License 2.0
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.6.0
install_requires =
    glfw
    numpy
    pyopengl
    pyopengl-accelerate

[options.packages.find]
where = src
